syntax = "proto3";

package cv;

option go_package = "./internal/cv/grpc/cv;cv";

service CVService {
  rpc CreateCV(CreateCVRequest) returns (CVResponse);

  rpc GetAllCVsByUserID(GetAllCVsByUserIDRequest) returns (GetAllCVsResponse);

  rpc GetCVByID(GetCVByIDRequest) returns (CVResponse);

  rpc DeleteCVByID(DeleteCVByIDRequest) returns (DeleteCVByIDResponse);

  rpc UpdateCV(UpdateCVRequest) returns (CVResponse);

  rpc GetOriginalID(GetOriginalIDRequest) returns (GetOriginalIDResponse);
}

message CreateCVRequest {
  string name = 1;
  string user_id = 2;
}

message GetAllCVsByUserIDRequest {
  string user_id = 1;
}

message GetAllCVsResponse {
  repeated CV cv_list = 1;
}

message GetCVByIDRequest {
  string cv_id = 1;
}

message DeleteCVByIDRequest {
  string cv_id = 1;
}

message DeleteCVByIDResponse {
  bool success = 1;
}

message UpdateCVRequest {
  string cv_id = 1;
  string name = 2;
}

message CVResponse {
  string id = 1;
  string external_id = 2;
  string name = 3;
  string created_at = 4;
}

message CV {
  string id = 1;
  string external_id = 2;
  string name = 3;
  string created_at = 4;
}

message GetOriginalIDRequest {
  string cv_id = 1;
  string user_id = 2;
}

message GetOriginalIDResponse {
  string id = 1; // ID
}
